Refactor terrain height handling and structure set lookup
- Updated TerrainHeightMixin to improve terrain height constraints and fluid handling.
- Refactored WeirdScaledSamplerMixin for better noise sampling.
- Introduced StructureHandler and StructureSetsLookup for managing structure rules and filtering.
- Enhanced ResourceKeyCompat and BiomeCompat for better compatibility handling.
- Cleaned up code formatting for consistency across various classes.